--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    ext {
+        kotlin_version = "1.4.32"
+        room_version = "2.2.6"
+    }
+
     repositories {
         google()
         jcenter()
