--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,11 @@ dependencies {
 
     // Hilt-Dagger
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+    implementation "com.google.dagger:hilt-android:2.33-beta"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+
+    // Androidx
+    implementation "androidx.fragment:fragment-ktx:1.3.2"
+    implementation "androidx.activity:activity-ktx:1.2.2"
 }
