--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         kotlin_version = "1.4.32"
         room_version = "2.2.6"
         nav_version = "2.3.5"
+        retrofit_version = "2.9.0"
+        okhttp3_version = "4.8.0"
     }
 
     repositories {
